--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,14 @@
     },
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "lucide-react": "^0.441.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "class-variance-authority": "^0.6.1",
+        "clsx": "^1.2.1",
+        "lucide-react": "^0.219.0",
         "next": "14.2.11",
         "react": "^18",
         "react-dom": "^18",
-        "tailwind-merge": "^2.5.2",
+        "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
