--- a/backend-questions/package.json
+++ b/backend-questions/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongodb": "4.0"
+    "fs": "^0.0.1-security",
+    "mongodb": "4.0",
+    "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7"
   }
 }
