--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -7,5 +7,31 @@
     },
     "author": "",
     "license": "MIT",
-    "description": ""
+    "description": "",
+    "dependencies": {
+        "class-validator": "^0.14.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.0",
+        "helmet": "^7.1.0",
+        "mongoose": "^8.6.3",
+        "winston": "^3.14.2"
+    },
+    "devDependencies": {
+        "@testcontainers/mongodb": "^10.13.1",
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^6.1.1",
+        "@types/express": "^4.17.21",
+        "@types/helmet": "^0.0.48",
+        "@types/jest": "^29.5.13",
+        "@types/node": "^22.5.5",
+        "@types/supertest": "^6.0.2",
+        "globals": "^15.9.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.7",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.2"
+    }
 }
