--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.tsx",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "start": "tsc && vite",
+    "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint 'src/**/*.{ts,tsx}'"
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-loader": "^9.2.1",
     "eslint": "^8.57.1",
@@ -20,12 +24,13 @@
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
     "vite": "^5.4.6"
   },
   "dependencies": {
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
