--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@next/font": "^14.2.13",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-pro-sidebar": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
