--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -13,6 +13,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@types/nodemailer": "^6.4.16",
         "bcrypt": "^5.1.1",
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
@@ -22,6 +23,7 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.6.3",
+        "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "winston": "^3.14.2"
@@ -35,7 +37,6 @@
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.13",
         "@types/jsonwebtoken": "^9.0.7",
-        "@types/node": "^22.5.5",
         "@types/passport": "^1.0.16",
         "@types/passport-local": "^1.0.38",
         "@types/supertest": "^6.0.2",
@@ -44,7 +45,6 @@
         "nodemon": "^3.1.4",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.6.2"
+        "ts-node": "^10.9.2"
     }
 }
