--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -24,6 +24,7 @@
         "mongoose": "^8.6.3",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "winston": "^3.14.2"
     },
@@ -39,6 +40,7 @@
         "@types/node": "^22.5.5",
         "@types/nodemailer": "^6.4.16",
         "@types/passport": "^1.0.16",
+        "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
         "@types/supertest": "^6.0.2",
         "globals": "^15.9.0",
