--- a/matching-service/frontend-component/package.json
+++ b/matching-service/frontend-component/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "buffer": "^6.0.3",
     "framer-motion": "^11.5.4",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "jwt-simple": "^0.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
