--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "framer-motion": "^11.5.4",
+    "monaco-editor": "^0.52.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
