--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       build:
         context: ./frontend
         dockerfile: Dockerfile
-      volumes:
-        - ./frontend:/app
+      # volumes:
+      #   - ./frontend:/app
       ports:
         - "3000:3000"
 
@@ -18,8 +18,17 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - 8000:8000
-    volumes:
-      - ./backend/api-gateway:/app
+    # volumes:
+    #   - ./backend/api-gateway:/app
+
+  question-app:
+    build: 
+      context: ./backend/question-service
+      dockerfile: Dockerfile.dev
+    ports:
+      - 8001:8001
+    # volumes:
+    #   - ./backend/question-service:/app
 
   user-app:
     build: 
@@ -27,15 +36,14 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - 8003:8003
-    volumes:
-      - ./backend/user-service:/app
+    # volumes:
+    #   - ./backend/user-service:/app
     depends_on:
       - user-service-db
 
   user-service-db:
     container_name: user-service-db
     image: mongo:latest
-    # volumes in the future...
     ports:
       - "27017:27017"
     healthcheck:
