--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -13,7 +13,6 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
-        "@types/nodemailer": "^6.4.16",
         "bcrypt": "^5.1.1",
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
@@ -37,6 +36,8 @@
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.13",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.5.5",
+        "@types/nodemailer": "^6.4.16",
         "@types/passport": "^1.0.16",
         "@types/passport-local": "^1.0.38",
         "@types/supertest": "^6.0.2",
