--- a/backend/user-service/tsconfig.json
+++ b/backend/user-service/tsconfig.json
@@ -108,5 +108,5 @@
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
     "include": ["src/**/*"],
-    "exclude": ["**/*.test.ts"]
+    "exclude": ["**/*.test.ts", "**/*.html"]
 }
