--- a/backend/question/package.json
+++ b/backend/question/package.json
@@ -2,10 +2,11 @@
   "name": "question",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "tsx server.ts",
+    "dev": "nodemon --exec tsx server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.6.3",
-    "nodemon": "^3.1.4"
+    "mongoose-sequence": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose-sequence": "^3.0.11",
+    "@types/node": "^22.5.5",
+    "nodemon": "^3.1.7"
   }
 }
