--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -13,32 +13,33 @@ services:
       - "4000:4000"
     restart: always
     depends_on:
-      - questions-service
-      - users-service
+      - question-service
+      - user-service
+      - auth-service
     networks:
       - backend-network
 
-  questions-service:
+  question-service:
     build:
-      context: ./questions-service
+      context: ./question-service
       target: production
-    container_name: questions-service
+    container_name: question-service
     command: npm run start:prod
     restart: always
     env_file:
-      - ./questions-service/.env
+      - ./question-service/.env
     networks:
       - backend-network
 
-  users-service:
+  user-service:
     build:
-      context: ./users-service
+      context: ./user-service
       target: production
-    container_name: users-service
+    container_name: user-service
     command: npm run start:prod
     restart: always
     env_file:
-      - ./users-service/.env
+      - ./user-service/.env
     networks:
       - backend-network
 
