--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "format": "npx prettier --write ."
+        "lint": "next lint"
     },
     "dependencies": {
         "classnames": "^2.5.1",
@@ -22,7 +21,6 @@
         "eslint": "^8",
         "eslint-config-next": "^15.0.0-rc.0",
         "postcss": "^8",
-        "prettier": "^3.3.3",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
