--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
 	<description>Backend</description>
+	<packaging>pom</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -29,6 +30,12 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	<modules>
+		<module>service-sample</module>
+		<module>service-user</module>
+		<module>service-question</module>
+		<!-- Add more services when needed -->
+	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
