--- a/backend/collaboration/package.json
+++ b/backend/collaboration/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts | pino-pretty",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "dev": "env-cmd -f .env.local nodemon src/index.ts | pino-pretty",
+    "build": "env-cmd -f .env.local tsc && tsc-alias",
+    "start": "env-cmd -f .env.local node dist/index.js",
+    "build:prod": "env-cmd -f .env.prod tsc && tsc-alias",
+    "start:prod": "env-cmd -f .env.local node dist/index.js",
+    "db:generate": "env-cmd -f .env.local drizzle-kit generate",
+    "db:migrate": "env-cmd -f .env.local tsx drizzle.migrate.ts",
+    "db:inspect": "env-cmd -f .env.local drizzle-kit studio",
     "fmt": "prettier --config .prettierrc src --write",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx drizzle.migrate.mts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +20,7 @@
   "description": "",
   "dependencies": {
     "drizzle-orm": "^0.33.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.21.0",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
@@ -28,6 +32,7 @@
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10"
   }
 }
