--- a/backend/user/.env.local
+++ b/backend/user/.env.local
@@ -1,4 +1,7 @@
 EXPRESS_ENV="local"
+PEERPREP_UI_HOST="http://localhost:5173"
+
+EXPRESS_PORT=9001
 EXPRESS_DB_HOST="localhost"
 EXPRESS_DB_PORT=5431
 POSTGRES_DB="user"
