--- a/backend/user/docker-compose.yml
+++ b/backend/user/docker-compose.yml
@@ -26,8 +26,9 @@ services:
       args: 
         # For building with the correct env vars
         - env=${EXPRESS_ENV}
+        - port=${EXPRESS_PORT}
     ports:
-      - "9001:8001"
+      - "9001:${EXPRESS_PORT}"
     command: node dist/index.js
     env_file:
       - ./.env.local
