--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
     "env-cmd": "^10.1.0",
     "express": "^4.21.0",
@@ -35,6 +36,7 @@
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.13",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.5",
