--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "env-cmd -f .env.local vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "env-cmd": "^10.1.0",
     "lucide-react": "^0.441.0",
     "mobx": "^6.13.2",
     "mobx-react": "^9.1.1",
