--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -1,9 +1,11 @@
 {
     "name": "question-service",
     "version": "1.0.0",
-    "main": "index.ts",
+    "main": "server/index.ts",
     "scripts": {
-        "dev": "nodemon --exec ts-node index.ts",
+        "build": "tsc",
+        "start": "nodemon dist/server/index.js",
+        "dev": "nodemon --exec ts-node server/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
