--- a/backend/question/package.json
+++ b/backend/question/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "npx tsc -w & nodemon dist/server.js"
+    "start": "cp .env dist/.env && npx tsc -w & nodemon dist/server.js"
   },
   "author": "",
   "license": "ISC",
