--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.6.3",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2"
