--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,19 @@ services:
       - ./backend/user/.env
     networks:
       - peer-prep-network
+
+  mongo:
+    image: mongo
+    container_name: mongo-container
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    networks:
+      - peer-prep-network
   
+volumes:
+  mongo-data:
+
 networks:
   peer-prep-network:
