--- a/package.json
+++ b/package.json
@@ -33,12 +33,5 @@
             "prettier --write --ignore-unknown"
         ]
     },
-    "packageManager": "npm@10.8.2+",
-    "dependencies": {
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "lucide-react": "^0.445.0",
-        "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
-    }
+    "packageManager": "npm@10.8.2+"
 }
