--- a/matchingService/package.json
+++ b/matchingService/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/uuid": "^10.0.0",
     "amqplib": "^0.10.4",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "express": "^4.21.0",
     "uuid": "^10.0.0"
   }
 }
