--- a/project/apps/api-gateway/package.json
+++ b/project/apps/api-gateway/package.json
@@ -24,11 +24,16 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.3",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@repo/dtos": "workspace:*",
     "@repo/pipes": "workspace:*",
     "@supabase/supabase-js": "^2.45.4",
     "cookie-parser": "^1.4.6",
+    "nestjs-pino": "^4.1.0",
+    "passport-jwt": "^4.0.1",
+    "passport-strategy": "^1.0.0",
+    "pino-pretty": "^11.2.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -40,6 +45,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-strategy": "^0.2.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
