--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,7 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
+      - user-service
       - frontend
     healthcheck:
       test:
@@ -30,5 +31,27 @@ services:
       - react-build:/app/dist
     entrypoint: ["sh", "-c", "npm run build && exit 0"]
 
+  user-service:
+    build:
+      context: ./user-service
+    container_name: user-service-backend
+    ports:
+      - "3001:3001"
+    env_file:
+      - .env
+    depends_on:
+      - user-service-mongo
+    volumes:
+      - ./user-service:/app
+      - /app/node_modules
+
+  user-service-mongo:
+    image: mongo:4.2
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
 volumes:
+  mongo-data:
   react-build:
