--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "NODE_ENV=test jest",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,8 @@
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
-    "nodemon": "^3.1.5"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.5",
+    "supertest": "^7.0.0"
   }
 }
