--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
         "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "eslint-config-next": "14.2.11",
+        "husky": "^9.1.6",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.47",
