--- a/.github/workflows/pr-build-check.yml
+++ b/.github/workflows/pr-build-check.yml
@@ -17,6 +17,8 @@ jobs:
         
     - name: Install dependencies
       run: yarn install
+      working-directory: ./frontend
       
     - name: Build
       run: yarn build
+      working-directory: ./frontend
