--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "license": "ISC",
     "devDependencies": {
         "prettier": "^3.3.3"
+    },
+    "dependencies": {
+        "express": "^4.21.0"
     }
 }
